fix for img overflowing cool pics modal in Chrome

--- a/unit_2/coolpics/coolpics.css
+++ b/unit_2/coolpics/coolpics.css
@@ -67,6 +67,7 @@ img {
 .viewer img {
     max-width: 100%;
     object-fit: contain;
+    overflow: hidden;
 }
 
 .viewer button {
